--- a/src/app/home/home/home.component.tns.html
+++ b/src/app/home/home/home.component.tns.html
@@ -1,4 +1,7 @@
 <StackLayout>
   <Label class="h1 title"
     [text]="'home.title' | translate"></Label>
+
+  <Label [text]="(user$ | async)?.displayName" class="h1"></Label>
+  
 </StackLayout>
