Initial working version with the full workflow

--- a/src/app/app.component.tns.html
+++ b/src/app/app.component.tns.html
@@ -1,10 +1,10 @@
- <GridLayout rows="auto, *">
+ <!-- <GridLayout rows="auto, *">
     <StackLayout>
         <seed-menu [items]="menuItems"></seed-menu>
     </StackLayout>
     <StackLayout class="container" row="1">
         <router-outlet></router-outlet>
     </StackLayout>
-</GridLayout> 
+</GridLayout>  -->
 
-<!-- <page-router-outlet></page-router-outlet> -->
+<page-router-outlet></page-router-outlet>
