--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -49,4 +49,8 @@
     (click)="register(loginForm.valid)"
     type="submit">Register
   </button>
+
+  <button (click)="logout()">Logout</button>
+  <button (click)="update()">Update</button>
+  <button (click)="reset()">Reset</button>
  </form>
