--- a/src/app/pet-search/pet-search-results/pet-search-results.component.html
+++ b/src/app/pet-search/pet-search-results/pet-search-results.component.html
@@ -1,2 +1,9 @@
 <h1 class="title"
   [innerText]="'pet-search-results.title' | translate"></h1>
+
+<div>
+  <petbros-pet
+    *ngFor="let pet of pets"
+    [pet]="pet">
+  </petbros-pet>
+</div>
