--- a/src/app/pet-search/pet-search-results/pet-search-results.component.tns.html
+++ b/src/app/pet-search/pet-search-results/pet-search-results.component.tns.html
@@ -1,6 +1,12 @@
 <ActionBar [title]="'pet-search-results.title' | translate" class="action-bar">
 </ActionBar>
 <StackLayout>
-  <Label class="h1 title"
-    [text]="'pet-search-results.title' | translate"></Label>
+  <Label *ngIf="pets?.length === 0" text="no pets found" class="h1"></Label>
+  <ListView height="100%"
+    [items]="pets"
+    class="list-group">
+    <ng-template let-pet="item">
+      <petbros-pet [pet]="pet"></petbros-pet>
+    </ng-template>
+  </ListView>
 </StackLayout>
