--- a/src/app/pet-search/pet-search/pet-search.component.html
+++ b/src/app/pet-search/pet-search/pet-search.component.html
@@ -1,2 +1,26 @@
 <h1 class="title"
   [innerText]="'pet-search.title' | translate"></h1>
+
+<input [(ngModel)]="location">
+
+<select [(ngModel)]="searchOptions.animal" (change)="refreshBreeds()">
+  <option value="">Any Animal</option>
+  <option *ngFor="let animal of availableValues.animal">{{animal}}</option>
+</select>
+
+<select [(ngModel)]="searchOptions.breed">
+  <option value="">Any Breed</option>
+  <option *ngFor="let breed of breeds">{{breed}}</option>
+</select>
+
+<select [(ngModel)]="searchOptions.age">
+  <option value="">Any Age</option>
+  <option *ngFor="let age of availableValues.age">{{age}}</option>
+</select>
+
+<select [(ngModel)]="searchOptions.sex">
+  <option value="">Any Sex</option>
+  <option *ngFor="let sex of availableValues.sex">{{sex}}</option>
+</select>
+
+<button (click)="findPets()">Find Pets</button>
