--- a/src/app/pet-search/pet-search/pet-search.component.tns.html
+++ b/src/app/pet-search/pet-search/pet-search.component.tns.html
@@ -1,6 +1,34 @@
 <ActionBar [title]="'pet-search.title' | translate" class="action-bar">
 </ActionBar>
-<StackLayout>
-  <Label class="h1 title"
-    [text]="'pet-search.title' | translate"></Label>
-</StackLayout>
+<ScrollView>
+  <StackLayout class="p-x-10">
+    <TextField hint="location" [(ngModel)]="location"></TextField>
+
+    <Button (tap)="findPets()" text="Find Pets" class="btn btn-primary"></Button>
+    <Label [text]="'Animal: ' + searchOptions.animal" class="h3"></Label>
+    <ListPicker
+      [items]="availableValues.animal"
+      index="0"
+      (selectedIndexChange)="searchOptions.animal = ($event.value || $event.value == 0) ? availableValues.animal[$event.value] : ''; refreshBreeds();">
+    </ListPicker>
+
+    <Label [text]="'Breed: ' + searchOptions.breed" class="h3"></Label>
+    <ListPicker
+      [items]="breeds"
+      (selectedIndexChange)="searchOptions.breed = ($event.value || $event.value == 0) ? breeds[$event.value] : ''">
+    </ListPicker>
+
+    <Label [text]="'Age: ' + searchOptions.age" class="h3"></Label>
+    <ListPicker
+      [items]="availableValues.age"
+      (selectedIndexChange)="searchOptions.age = ($event.value || $event.value == 0) ? availableValues.age[$event.value] : ''">
+    </ListPicker>
+
+    <Label [text]="'Sex: ' + searchOptions.sex" class="h3"></Label>
+    <ListPicker
+      [items]="availableValues.sex"
+      (selectedIndexChange)="searchOptions.sex = ($event.value || $event.value == 0) ? availableValues.sex[$event.value] : ''">
+    </ListPicker>
+
+  </StackLayout>
+</ScrollView>
