--- a/src/app/shelter-details/shelter-details/shelter-details.component.tns.html
+++ b/src/app/shelter-details/shelter-details/shelter-details.component.tns.html
@@ -1,13 +1,21 @@
 <ActionBar [title]="shelter?.name" class="action-bar">
 </ActionBar>
 <StackLayout>
-  <Label class="h1 title"
-    [text]="'shelter-details.title' | translate"></Label>
-
-  <Label [text]="shelter?.name" class="h3"></Label>
-  <Label [text]="shelter?.address1" class="h3"></Label>
-  <Label [text]="shelter?.address2" class="h3"></Label>
-  <Label [text]="shelter?.city + ', ' + shelter?.state" class="h3"></Label>
-  <Label [text]="shelter?.phone" class="h3"></Label>
-  <Label [text]="shelter?.email" class="h3"></Label>
+  <StackLayout *ngIf="shelter">
+    <Label [text]="shelter.name" class="h3"></Label>
+    <Label [text]="shelter.phone" class="h3"></Label>
+    <Label [text]="shelter.email" class="h3"></Label>
+  
+    <Label *ngIf="shelter.address1" [text]="shelter.address1" class="h3"></Label>
+    <Label *ngIf="shelter.address2" [text]="shelter.address2" class="h3"></Label>
+    <Label [text]="shelter.city + ', ' + shelter.state" class="h3"></Label>
+  
+    <Label [text]="'lat:' + shelter.latitude + ', long:' + shelter.longitude" class="h4"></Label>
+    
+    <Button *ngIf="!favourite" text="❤️" (tap)="addToFavourites()" class="btn btn-primary"></Button>
+    <Button *ngIf="favourite" text="💔" (tap)="removeFromFavourites()" class="btn btn-primary"></Button>
+  
+    <Label text="Shelter Pets" class="title"></Label>
+    <petbros-shelter-pets [shelterId]="shelter.id"></petbros-shelter-pets>
+  </StackLayout>
 </StackLayout>
