--- a/src/app/shelter-details/shelter-pets/shelter-pets.component.tns.html
+++ b/src/app/shelter-details/shelter-pets/shelter-pets.component.tns.html
@@ -1,6 +1,7 @@
-<ActionBar [title]="'shelter-pets.title' | translate" class="action-bar">
-</ActionBar>
-<StackLayout>
-  <Label class="h1 title"
-    [text]="'shelter-pets.title' | translate"></Label>
-</StackLayout>
+<ListView height="100%"
+  [items]="pets"
+  class="list-group">
+  <ng-template let-pet="item">
+    <petbros-pet [pet]="pet"></petbros-pet>
+  </ng-template>
+</ListView>
