--- a/src/app/shelter-search/shelter-search-results/shelter-search-results.component.tns.html
+++ b/src/app/shelter-search/shelter-search-results/shelter-search-results.component.tns.html
@@ -1,6 +1,11 @@
 <ActionBar [title]="'shelter-search-results.title' | translate" class="action-bar">
 </ActionBar>
 <StackLayout>
-  <Label class="h1 title"
-    [text]="'shelter-search-results.title' | translate"></Label>
+  <ListView height="100%"
+    [items]="shelters"
+    class="list-group">
+    <ng-template let-shelter="item">
+      <petbros-shelter [shelter]="shelter"></petbros-shelter>
+    </ng-template>
+  </ListView>
 </StackLayout>
