--- a/src/app/shelter-search/shelter-search/shelter-search.component.tns.html
+++ b/src/app/shelter-search/shelter-search/shelter-search.component.tns.html
@@ -1,6 +1,26 @@
 <ActionBar [title]="'shelter-search.title' | translate" class="action-bar">
 </ActionBar>
-<StackLayout>
-  <Label class="h1 title"
-    [text]="'shelter-search.title' | translate"></Label>
-</StackLayout>
+
+<ScrollView>
+  <StackLayout class="p-x-10">
+    <TextField hint="location" [(ngModel)]="location"></TextField>
+    <TextField hint="name" [(ngModel)]="name"></TextField>
+    <Button (tap)="findShelters()" text="Find Shelters" class="btn btn-primary"></Button>
+    
+    <Label [text]="'Animal: ' + animal" class="h3"></Label>
+    <ListPicker
+      [items]="availableValues.animal"
+      index="0"
+      (selectedIndexChange)="animal = ($event.value || $event.value == 0) ? availableValues.animal[$event.value] : ''; refreshBreeds();">
+    </ListPicker>
+  
+    <Label [text]="'Breed: ' + breed" class="h3"></Label>
+    <ListPicker
+      [items]="breeds"
+      (selectedIndexChange)="breed = ($event.value || $event.value == 0) ? breeds[$event.value] : ''">
+    </ListPicker>
+    
+    <Button (tap)="findShelters()" text="Find Shelters by Breed" class="btn btn-primary"></Button>
+
+  </StackLayout>
+</ScrollView>
