--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    margin:0;
-    font-family: 'Open Sans', sans-serif;
+  margin:0;
+  font-family: 'Open Sans', sans-serif;
 }
 .container {
-    margin:40px;
+  margin:40px;
+}
+
+.bar {
+  width: 100%;
+  background-color: #2196F3;
+  color: white;
 }
