--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -10,3 +10,19 @@
     background-color: #a94442;
     color: #ffffff;
 }
+
+.form-field {
+    width: 100%;
+}
+
+.demo-tab-group {
+    border: 1px solid #e8e8e8;
+    width: 400px;
+}
+
+// .demo-tab-group {
+// }
+
+.demo-tab-content {
+    padding: 16px;
+}
