--- a/src/app/menu/components/menu/menu.component.scss
+++ b/src/app/menu/components/menu/menu.component.scss
@@ -1,9 +1,4 @@
-$menuHeight: 80px;
-
-:host {
-    display:block;
-    background-color: #2196F3;
-    height:$menuHeight;
-    line-height:$menuHeight;
-    padding:0 20px;
+  
+.nav-button {
+  margin: 0 10px 0 0;
 }
