--- a/src/app/pet-search/pet-search/pet-search.component.html
+++ b/src/app/pet-search/pet-search/pet-search.component.html
@@ -1,22 +1,46 @@
 <h1 class="title"
   [innerText]="'pet-search.title' | translate"></h1>
 
-<input [(ngModel)]="searchOptions.location">
+<div class="form-container">
 
-<select [(ngModel)]="searchOptions.animal" (change)="refreshBreeds()">
-  <option *ngFor="let animal of animals" [value]="animal.key">{{animal.label}}</option>
-</select>
+  <md-form-field class="form-input-field">
+    <input mdInput
+      placeholder="Location"
+      [(ngModel)]="searchOptions.location">
+  </md-form-field> <br/>
 
-<select [(ngModel)]="searchOptions.breed">
-  <option *ngFor="let breed of breeds" [value]="breed.key">{{breed.label}}</option>
-</select>
+  <md-select placeholder="Animal Type" [(ngModel)]="searchOptions.animal" (change)="refreshBreeds()" class="form-select-field">
+    <md-option *ngFor="let animal of animals"
+      [value]="animal.key">
+      {{animal.label}}
+    </md-option>
+  </md-select> <br/>
 
-<select [(ngModel)]="searchOptions.age">
-  <option *ngFor="let age of ages" [value]="age.key">{{age.label}}</option>
-</select>
+  <md-select placeholder="Breed" [(ngModel)]="searchOptions.breed" class="form-select-field">
+    <md-option *ngFor="let breed of breeds"
+      [value]="breed.key">
+      {{breed.label}}
+    </md-option>
+  </md-select> <br/>
 
-<select [(ngModel)]="searchOptions.sex">
-  <option *ngFor="let sex of sexes" [value]="sex.key">{{sex.label}}</option>
-</select>
+  <md-select placeholder="Age" [(ngModel)]="searchOptions.age" class="form-select-field">
+    <md-option *ngFor="let age of ages"
+      [value]="age.key">
+      {{age.label}}
+    </md-option>
+  </md-select> <br/>
 
-<button (click)="findPets()">Find Pets</button>
+  <md-select placeholder="Sex" [(ngModel)]="searchOptions.sex" class="form-select-field">
+    <md-option *ngFor="let sex of sexes"
+      [value]="sex.key">
+      {{sex.label}}
+    </md-option>
+  </md-select> <br/>
+
+  <button md-raised-button
+    (click)="findPets()"
+    color="primary">
+    Find Pets
+  </button>
+
+</div>
