--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,10 @@
 <h1 class="title"
 [innerText]="'login.title' | translate"></h1>
 
-<md-tab-group class="demo-tab-group">
-  <md-tab label="Login" class="demo-tab">
-    <form #loginForm="ngForm" class="demo-tab-content">
-      <md-form-field class="form-field">
+<md-tab-group class="tab-group">
+  <md-tab label="Login">
+    <form #loginForm="ngForm" class="tab-content">
+      <md-form-field class="form-input-field">
         <input mdInput
         placeholder="Email"
         #emailModel="ngModel"
@@ -13,7 +13,7 @@
         [(ngModel)]="email" 
         required email >
       </md-form-field> <br/>
-      <md-form-field class="form-field">
+      <md-form-field class="form-input-field">
         <input mdInput
         placeholder="Password"
         #passwordModel="ngModel"
@@ -31,9 +31,9 @@
     </form>
   </md-tab>
 
-  <md-tab label="Register" class="demo-tab">
-    <form #registrationForm="ngForm" class="demo-tab-content">
-      <md-form-field class="form-field">
+  <md-tab label="Register">
+    <form #registrationForm="ngForm" class="tab-content">
+      <md-form-field class="form-input-field">
         <input mdInput
         placeholder="Email"
         #emailModel="ngModel"
@@ -42,7 +42,7 @@
         [(ngModel)]="email" 
         required email >
       </md-form-field> <br/>
-      <md-form-field class="form-field">
+      <md-form-field class="form-input-field">
         <input mdInput
         placeholder="Password"
         #passwordModel="ngModel"
@@ -52,7 +52,7 @@
         required>
       </md-form-field> <br/>
       
-      <md-form-field class="form-field">
+      <md-form-field class="form-input-field">
         <input mdInput placeholder="Name"
         #emailModel="ngModel"
         name="displayName"
@@ -67,7 +67,6 @@
         (click)="register(loginForm.valid)"
         type="submit">Register
       </button>
-
     </form>
   </md-tab>
 </md-tab-group>
