--- a/src/app/menu/components/menu-item/menu-item.component.html
+++ b/src/app/menu/components/menu-item/menu-item.component.html
@@ -1,4 +1,7 @@
-<a *ngIf="item"
-    [routerLink]="item.link"
-    [routerLinkActive]="'active'"
-    [innerText]="item.title | translate"></a>
+<button *ngIf="item"
+  md-button color="accent"
+  #rla="routerLinkActive"
+  [routerLink]="item.link"
+  [routerLinkActive]="'active'">
+  {{item.title | translate}}
+</button>
