--- a/src/app/menu/components/menu-item/menu-item.component.scss
+++ b/src/app/menu/components/menu-item/menu-item.component.scss
@@ -1,17 +1,21 @@
 
-:host {
-    margin:0 20px;
+.nav-button {
+  margin: 0 10px 0 0;
 }
 
-a {
-    color:#fff;
-    text-decoration: none;
-    font-size:15px;
-    font-weight:600;
-    &.active {
-        color: #FFEB3B;
-    }
-    &:hover {
-        text-decoration: underline;
-    }
-}
+// :host {
+//   margin:0 20px;
+// }
+
+// a {
+//   color:#fff;
+//   text-decoration: none;
+//   font-size:15px;
+//   font-weight:600;
+//   &.active {
+//     color: #FFEB3B;
+//   }
+//   &:hover {
+//     text-decoration: underline;
+//   }
+// }
