--- a/src/app/menu/components/menu/menu.component.html
+++ b/src/app/menu/components/menu/menu.component.html
@@ -7,7 +7,8 @@
   
   <button *ngIf="(user$ | async)"
    md-button
-   (click)="logout()">
+   (click)="logout()"
+   color="warn">
    Sign Out {{(user$ | async)?.displayName}}
   </button>
 </md-toolbar>
