--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,6 +1,5 @@
 <md-tab-group class="home-tab-group">
   <md-tab label="Favourite Pets">
-    <!-- <div class="tab-content"> -->
     <div class="pet-card-list">
       <!-- <h2 class="bar">Favourite Pets</h2> -->
       <petbros-pet
@@ -12,7 +11,7 @@
   </md-tab>
   
   <md-tab label="Favourite Shelters">
-    <div class="tab-content">
+    <div class="shelter-card-list">
         <!-- <h2 class="bar">Favourite Shelters</h2> -->
         <petbros-shelter
         *ngFor="let shelter of favouriteShelters$ | async"
